add new colors + new img

--- a/src/elements/shared-styles.html
+++ b/src/elements/shared-styles.html
@@ -6,10 +6,10 @@
   <template>
     <style>
       :host {
-        --dark-primary-color: #512DA8;
-        --default-primary-color: #673AB7;
-        --focused-color: #311B92;
-        --light-primary-color: #D1C4E9;
+        --dark-primary-color: #3AB449;
+        --default-primary-color: #006837;
+        --focused-color: #3AB449;
+        --light-primary-color: #3AB449;
         --text-primary-color: #FFFFFF;
         --accent-color: #FF5252;
         --primary-background-color: #FFFFFF;
@@ -34,14 +34,14 @@
         --slideAnimation: 0.4s cubic-bezier(0, 0, 0.2, 1);
         --border-radius: 4px;
         --box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-        --box-shadow-primary-color: 0 3px 3px -2px rgba(103, 58, 183, 0.3), 0 3px 4px 0 rgba(103, 58, 183, 0.3), 0 1px 8px 0 rgba(103, 58, 183, 0.3);
-        --box-shadow-primary-color-hover: 0 1px 3px -2px rgba(103, 58, 183, 0.4), 0 4px 5px 0 rgba(103, 58, 183, 0.4), 0 2px 9px 0 rgba(103, 58, 183, 0.4);
+        --box-shadow-primary-color: 0 3px 3px -2px rgba(58, 180, 73, 0.3), 0 3px 4px 0 rgba(58, 180, 73, 0.3), 0 1px 8px 0 rgba(58, 180, 73, 0.3);
+        --box-shadow-primary-color-hover: 0 1px 3px -2px rgba(58, 180, 73, 0.4), 0 4px 5px 0 rgba(58, 180, 73, 0.4), 0 2px 9px 0 rgba(58, 180, 73, 0.4);
         --font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif; /*TODO Change to Open Sans*/
         --max-container-width: 1280px;
 
-        --primary-color-transparent: rgba(103, 58, 183, 0.1);
-        --primary-color-light: rgba(103, 58, 183, 0.8);
-        --primary-color-white: #EDE7F6;
+        --primary-color-transparent: rgba(58, 180, 73, 0.1);
+        --primary-color-light: rgba(58, 180, 73, 0.8);
+        --primary-color-white: #A9EFB1;
 
         /* Labels */
         --gde: #3d5afe;
