--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -134,20 +134,20 @@
     <hero-block
       id="hero"
       background-image="{$ heroSettings.home.background.image $}"
-      background-color="{$ heroSettings.home.background.color $}"
+      background-color="#006837"
       font-color="{$ heroSettings.home.fontColor $}"
       active="[[active]]"
       hide-logo
     >
       <div class="home-content" layout vertical center>
-        <plastic-image class="hero-logo" srcset="/images/logo.svg" alt="{$ title $}"></plastic-image>
+        <plastic-image class="hero-logo" srcset="/images/logos/logo_tigre.svg" alt="{$ title $}"></plastic-image>
         <div class="info-items">
           <div class="info-item">{$ location.city $}. {$ dates $}</div>
           <div class="info-item">{$ heroSettings.home.description $}</div>
         </div>
 
 
-<!--         <div class="action-buttons" layout horizontal center-justified wrap>
+        <div class="action-buttons" layout horizontal center-justified wrap>
           <paper-button
             on-tap="_scrollToTickets"
             ga-on="click"
@@ -156,10 +156,10 @@
             ga-event-label="hero block - scroll to tickets"
             primary invert
           >
-            <iron-icon icon="hoverboard:ticket"></iron-icon>
+            <iron-icon icon="hoverboard:microphone"></iron-icon>
             {$ buyTicket $}
           </paper-button>
-        </div> -->
+        </div>
 
         <div class="scroll-down" on-tap="_scrollNextBlock">
           <svg xmlns="http://www.w3.org/2000/svg"  version="1.1" id="Layer_2" x="0px" y="0px" viewBox="0 0 25.166666 37.8704414" enable-background="new 0 0 25.166666 37.8704414" xml:space="preserve">
