Improvement in design and settings

--- a/src/elements/shared-styles.html
+++ b/src/elements/shared-styles.html
@@ -7,9 +7,9 @@
     <style>
       :host {
         --dark-primary-color: #3AB449;
-        --default-primary-color: #006837;
-        --focused-color: #3AB449;
-        --light-primary-color: #3AB449;
+        --default-primary-color: #048c4c;
+        --focused-color: #05ad5e;
+        --light-primary-color: #05ad5e;
         --text-primary-color: #FFFFFF;
         --accent-color: #FF5252;
         --primary-background-color: #FFFFFF;
