--- a/src/elements/about-organizer-block.html
+++ b/src/elements/about-organizer-block.html
@@ -34,6 +34,7 @@
       .organizers-photo {
         width: 100%;
         height: 100%;
+        border-radius: 8px;
       }
 
       .description {
