--- a/src/elements/subscribe-block.html
+++ b/src/elements/subscribe-block.html
@@ -12,7 +12,8 @@
     <style include="shared-styles flex flex-alignment">      :host {
         display: flex;
         width: 100%;
-        background: var(--default-primary-color);
+        background-image: url({$ heroSettings.home.background.image $});
+        background-position:center center;
         color: #fff;
         padding: 16px 0;
         --paper-input-container-focus-color: #000;
