Major content edit, fix webapp color theme, adding team in menu

--- a/src/elements/about-organizer-block.html
+++ b/src/elements/about-organizer-block.html
@@ -39,6 +39,7 @@
 
       .description {
         color: var(--secondary-text-color);
+        text-align: justify;
       }
 
       paper-button {
