--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -142,23 +142,24 @@
       <div class="home-content" layout vertical center>
         <plastic-image class="hero-logo" srcset="/images/logos/logo_tigre.svg" alt="{$ title $}"></plastic-image>
         <div class="info-items">
-          <div class="info-item">{$ location.city $}. {$ dates $}</div>
+          <div class="info-item">{$ dates $}.</div>
           <div class="info-item">{$ heroSettings.home.description $}</div>
         </div>
 
-
         <div class="action-buttons" layout horizontal center-justified wrap>
+          <a href="https://conference-hall.io/public/event/ONmsPlwbLHHBTtFGkZpJ" target="_blank" rel="noopener noreferrer" ga-on="click"
+           ga-event-category="cfp button" ga-event-action="cfp_click">
           <paper-button
             on-tap="_scrollToTickets"
             ga-on="click"
-            ga-event-category="tickets"
+            ga-event-category="cfp"
             ga-event-action="scroll"
-            ga-event-label="hero block - scroll to tickets"
             primary invert
           >
             <iron-icon icon="hoverboard:microphone"></iron-icon>
             {$ buyTicket $}
           </paper-button>
+          </a>
         </div>
 
         <div class="scroll-down" on-tap="_scrollNextBlock">
