Adding a new page dedicated to sustainability mesures

--- a/src/hoverboard-app.html
+++ b/src/hoverboard-app.html
@@ -243,6 +243,10 @@
             data-route="coc"
             data-path="pages/coc-page.html"
           ></coc-page>
+          <sustainability-page
+            data-route="sustainability"
+            data-path="pages/sustainability-page.html"
+          ></sustainability-page>
         </iron-lazy-pages>
 
       </app-header-layout>
