add cancel element + modify home-page

--- a/src/hoverboard-app.html
+++ b/src/hoverboard-app.html
@@ -31,6 +31,7 @@
 <link rel="import" href="elements/header-toolbar.html">
 <link rel="import" href="elements/hero-block.html">
 <link rel="import" href="elements/footer-block.html">
+<link rel="import" href="elements/cancel-block.html">
 <link rel="import" href="elements/hoverboard-analytics.html">
 <link rel="import" href="effects/transparent-scroll.html">
 
@@ -198,7 +199,7 @@
           effects="waterfall transparent-scroll"
           condenses fixed
         >
-          <header-toolbar></header-toolbar>
+          <!-- <header-toolbar></header-toolbar> -->
         </app-header>
 
         <iron-lazy-pages
