--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -2,6 +2,7 @@
 
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 
+<link rel="import" href="../elements/cancel-block.html">
 <link rel="import" href="../elements/about-block.html">
 <link rel="import" href="../elements/speakers-block.html">
 <link rel="import" href="../elements/latest-posts-block.html">
@@ -131,7 +132,7 @@
 
     <polymer-helmet active="[[active]]"></polymer-helmet>
 
-    <hero-block
+<!--     <hero-block
       id="hero"
       background-image="{$ heroSettings.home.background.image $}"
       background-color="#006837"
@@ -170,14 +171,15 @@
           <i class="icon icon-arrow-down"></i>
         </div>
       </div>
-    </hero-block>
-    <about-block></about-block>
+    </hero-block> -->
+    <cancel-block></cancel-block>
+    <!-- <about-block></about-block> -->
     <!-- <speakers-block></speakers-block> -->
-    <subscribe-block></subscribe-block>
+    <!-- <subscribe-block></subscribe-block> -->
     <!-- <tickets-block></tickets-block> -->
-    <gallery-block></gallery-block>
-    <about-organizer-block></about-organizer-block>
-    <map-block></map-block>
+    <!-- <gallery-block></gallery-block> -->
+    <!-- <about-organizer-block></about-organizer-block> -->
+    <!-- <map-block></map-block> -->
     <!-- <partners-block></partners-block> -->
     <footer-block></footer-block>
   </template>
