Adding newsletter sub bar

--- a/src/elements/cancel-block.html
+++ b/src/elements/cancel-block.html
@@ -70,8 +70,11 @@
         <div class="center">
           <plastic-image class="hero-logo" srcset="/images/logos/logo_tigre.svg" alt="{$ title $}"></plastic-image>
           <h1 class="title">Nous vous informons que la deuxième édition du Devfest Strasbourg n’aura pas lieu en 2020. En effet, compte tenu des risques sanitaires liés à la crise actuelle, l’association GDG Strasbourg a estimé qu’un tel rassemblement ne pourrait avoir lieu sans risques pour les participants.</h1>
-          <p style="color: white">La  deuxième édition de ce grand rendez-vous des acteurs et amateurs des nouvelles technologies aura donc lieu en 2021, plus d’informationset de  précisions à ce sujet vous seront transmises dans les mois à venir. L’association GDG Strasbourg est d’ores et déjà mobilisée pour assurer le succès de cette prochaine édition afin de répondre aux attentes exprimées lors de l’édition précédente. Nous souhaitons une nouvelle fois remercier toutes les personnes qui ont permis à notre association de rendre ce projet concret et sommes navrés de cette situation. Prenez soin de vous.</p>
+          <p style="color: white">La  deuxième édition de ce grand rendez-vous des acteurs et amateurs des nouvelles technologies aura donc lieu en 2021, plus d’informations et de  précisions à ce sujet vous seront transmises dans les mois à venir. L’association GDG Strasbourg est d’ores et déjà mobilisée pour assurer le succès de cette prochaine édition afin de répondre aux attentes exprimées lors de l’édition précédente. Nous souhaitons une nouvelle fois remercier toutes les personnes qui ont permis à notre association de rendre ce projet concret et sommes navrés de cette situation. <br><br> Prenez soin de vous ❤</p>
           <p style="color: white">L’ensemble de l’équipe du GDG Strasbourg</p>
+          <br>
+          <center><p style="color: white">PS : Petit conseil pour réussir 2020 : inscrivez-vous à la newsletter, on vous réserve PLEIN de surprises 😎</p></center>
+          <iframe id="newsletter" width="540" height="305" src="https://304c9294.sibforms.com/serve/MUIEAOExW91fjFVO2iLIZKmog3hfeVkUckYpkXPhZ5J1jyDaeLlZLLNNYJjtgCgLjXYXe_2bDVZV-PbD9tB5gN4APCVetGLdjIl0sXoDCQ6W1j2atO8dinJVptNq14VevQmnqbCAvIGlunlZMQxjeF0O88XRl-ZP4XCF6SqHaVkQJQ1i8MeNoX1Rz6XKRji6-iuKH35XkYsnsuMa" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
         </div>
       </div>
     </div>
