--- a/src/elements/subscribe-block.html
+++ b/src/elements/subscribe-block.html
@@ -61,9 +61,9 @@
 
     </style>
 
-    <div class="container" layout vertical center$="[[viewport.isTabletPlus]]">
+    <div id="newsletter" class="container" layout vertical center$="[[viewport.isTabletPlus]]">
       <div class="description"> {$ subscribeBlock.callToAction.description $}</div>
-      <iframe width="540" height="305" src="https://304c9294.sibforms.com/serve/MUIEAOExW91fjFVO2iLIZKmog3hfeVkUckYpkXPhZ5J1jyDaeLlZLLNNYJjtgCgLjXYXe_2bDVZV-PbD9tB5gN4APCVetGLdjIl0sXoDCQ6W1j2atO8dinJVptNq14VevQmnqbCAvIGlunlZMQxjeF0O88XRl-ZP4XCF6SqHaVkQJQ1i8MeNoX1Rz6XKRji6-iuKH35XkYsnsuMa" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
+      <iframe id="newsletter" width="540" height="305" src="https://304c9294.sibforms.com/serve/MUIEAOExW91fjFVO2iLIZKmog3hfeVkUckYpkXPhZ5J1jyDaeLlZLLNNYJjtgCgLjXYXe_2bDVZV-PbD9tB5gN4APCVetGLdjIl0sXoDCQ6W1j2atO8dinJVptNq14VevQmnqbCAvIGlunlZMQxjeF0O88XRl-ZP4XCF6SqHaVkQJQ1i8MeNoX1Rz6XKRji6-iuKH35XkYsnsuMa" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
     </div>
 
   </template>
