correction for height issue on medium display size

--- a/src/elements/cancel-block.html
+++ b/src/elements/cancel-block.html
@@ -16,7 +16,7 @@
       }
 
       .container {
-        height: 100vh;
+        min-height: 100vh;
         position: relative;
         color: inherit;
         display: flex;
