new welcome text

--- a/src/elements/cancel-block.html
+++ b/src/elements/cancel-block.html
@@ -68,9 +68,17 @@
     <div class="container">
       <div class="content">
         <div class="center">
-          <plastic-image class="hero-logo" srcset="/images/logos/logo_tigre.svg" alt="{$ title $}"></plastic-image>
-          <h1 class="title">Nous vous informons que la deuxième édition du Devfest Strasbourg n’aura pas lieu en 2020. En effet, compte tenu des risques sanitaires liés à la crise actuelle, l’association GDG Strasbourg a estimé qu’un tel rassemblement ne pourrait avoir lieu sans risques pour les participants.</h1>
-          <p style="color: white">La  deuxième édition de ce grand rendez-vous des acteurs et amateurs des nouvelles technologies aura donc lieu en 2021, plus d’informations et de  précisions à ce sujet vous seront transmises dans les mois à venir. L’association GDG Strasbourg est d’ores et déjà mobilisée pour assurer le succès de cette prochaine édition afin de répondre aux attentes exprimées lors de l’édition précédente. Nous souhaitons une nouvelle fois remercier toutes les personnes qui ont permis à notre association de rendre ce projet concret et sommes navrés de cette situation. <br><br> Prenez soin de vous ❤</p>
+          <plastic-image class="hero-logo" srcset="/images/logos/logo_tigre_date_neutral.png" alt="{$ title $}"></plastic-image>
+          <h1 class="title">Devfest 2021 : Quoi Qu’il Arrive</h1>
+          <p style="color: white">
+            Début 2020 nous avions été contraints de reporter la deuxième édition du Devfest devant l’instabilité de la situation liée à la crise sanitaire. En 2019, la première édition avait réuni plus de 300 développeurs professionnels et passionnés durant toute une journée pour plus de 30 conférences réparties sur 3 scènes. Le Devfest 2019 c’était aussi plus de 12 partenaires qui nous ont fait confiance et qui ont pu présenter leur savoir-faire auprès de la communauté de développeurs du Grand Est.
+            <br>
+            <br>
+            Nous sommes très heureux de vous annoncer que le Devfest Strasbourg sera de retour dès 2021, quoi qu’il arrive. Notre équipe travail d’ores et déjà à sa préparation. Nous prévoyons tous les cas de figure : une édition classique, une édition avec le respect des distanciations sociales et une édition en en ligne avec un concept inédit et disruptif.
+            <br>
+            <br>
+            Pour faire de ce Devfest 2021 une réalité, nous avons besoin de vous : visiteurs, speakers et partenaires. Nous comptons sur vous ❤  
+          </p>
           <p style="color: white">L’ensemble de l’équipe du GDG Strasbourg</p>
           <br>
           <center><p style="color: white">PS : Petit conseil pour réussir 2020 : inscrivez-vous à la newsletter, on vous réserve PLEIN de surprises 😎</p></center>
