Changed year, added COVID message

--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -144,6 +144,7 @@
         <div class="info-items">
           <div class="info-item">{$ dates $}.</div>
           <div class="info-item">{$ heroSettings.home.description $}</div>
+          <div class="info-item">{$ heroSettings.home.covidMessage $}</div>
         </div>
 
         <div class="action-buttons" layout horizontal center-justified wrap>
