Updated mobile menu

--- a/src/hoverboard-app.html
+++ b/src/hoverboard-app.html
@@ -173,7 +173,22 @@
 
             <a
               class="bottom-drawer-link"
-              href$="[[_getTicketUrl(tickets)]]"
+              href="https://drive.google.com/drive/folders/1MhLbCGGKY4KfskhgqUfSPR1tQNDw7yOz?usp=sharing"
+              target="_blank"
+              rel="noopener noreferrer"
+              on-tap="closeDrawer"
+              ga-on="click"
+              ga-event-category="ticket button"
+              ga-event-action="buy_click"
+              layout horizontal center
+            >
+              <span>Devenir Partenaire</span>
+              <iron-icon icon="hoverboard:open-in-new"></iron-icon>
+            </a>
+
+            <a
+              class="bottom-drawer-link"
+              href="https://conference-hall.io/public/event/ONmsPlwbLHHBTtFGkZpJ"
               target="_blank"
               rel="noopener noreferrer"
               on-tap="closeDrawer"
