--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -175,11 +175,11 @@
     <about-block></about-block>
     <!-- <speakers-block></speakers-block> -->
     <subscribe-block></subscribe-block>
-    <tickets-block></tickets-block>
+    <!-- <tickets-block></tickets-block> -->
     <gallery-block></gallery-block>
     <about-organizer-block></about-organizer-block>
     <map-block></map-block>
-    <partners-block></partners-block>
+   <!--  <partners-block></partners-block> -->
     <footer-block></footer-block>
   </template>
 
