Add second about block, #QuoiQuilArrive

--- a/src/elements/about-block.html
+++ b/src/elements/about-block.html
@@ -68,7 +68,7 @@
 
         <div>
           <h1 class="container-title">{$ aboutBlock.title $}</h1>
-          <p>{$ aboutBlock.callToAction.featuredSessions.description $}</p>
+          <p style="text-align: justify;">{$ aboutBlock.callToAction.featuredSessions.description $}</p>
 
           <a
             href="{$ aboutBlock.callToAction.featuredSessions.link $}"
@@ -84,6 +84,9 @@
               <iron-icon icon="hoverboard:arrow-right-circle"></iron-icon>
             </paper-button>
           </a>
+
+          <h1 class="container-title" style="margin-top: 24px;">{$ aboutBlock2.title $}</h1>
+          <p style="text-align: justify;">{$ aboutBlock2.text $}</p>
         </div>
 
         <div class="statistics-block">
