removing CFP button and updating sponsors links

--- a/src/hoverboard-app.html
+++ b/src/hoverboard-app.html
@@ -173,7 +173,7 @@
 
             <a
               class="bottom-drawer-link"
-              href="https://drive.google.com/drive/folders/1MhLbCGGKY4KfskhgqUfSPR1tQNDw7yOz?usp=sharing"
+              href="https://drive.google.com/drive/folders/11Pde_gmGZFvYp5eK-3VTfOnro-SewK43"
               target="_blank"
               rel="noopener noreferrer"
               on-tap="closeDrawer"
