Changing logo and media kit link

--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -140,7 +140,7 @@
       hide-logo
     >
       <div class="home-content" layout vertical center>
-        <plastic-image class="hero-logo" srcset="/images/logos/logo_tigre.svg" alt="{$ title $}"></plastic-image>
+        <plastic-image class="hero-logo" srcset="/images/logos/logo_tigre_date_2021.png" alt="{$ title $}"></plastic-image>
         <div class="info-items">
           <div class="info-item">{$ dates $}.</div>
           <div class="info-item">{$ heroSettings.home.description $}</div>
