--- a/src/elements/header-toolbar.html
+++ b/src/elements/header-toolbar.html
@@ -153,17 +153,13 @@
 
         <a href="https://drive.google.com/drive/folders/11Pde_gmGZFvYp5eK-3VTfOnro-SewK43" target="_blank" rel="noopener noreferrer" ga-on="click"
            ga-event-category="partner button" ga-event-action="partner_click">
-          <paper-button class="buy-button" primary>Devenir partenaire</paper-button>
+          <paper-button class="buy-button" primary>Devenir sponsor</paper-button>
         </a>
 
-        <!-- CALL FOR PAPERS <a href="https://conference-hall.io/public/event/ONmsPlwbLHHBTtFGkZpJ" target="_blank" rel="noopener noreferrer" ga-on="click"
+        <a href="https://conference-hall.io/public/event/ONmsPlwbLHHBTtFGkZpJ" target="_blank" rel="noopener noreferrer" ga-on="click"
            ga-event-category="cfp button" ga-event-action="cfp_click">
           <paper-button class="buy-button" primary>Call For Papers</paper-button>
-        </a> -->
-        <!-- <a href$="[[_getTicketUrl(tickets)]]" target="_blank" rel="noopener noreferrer" ga-on="click"
-           ga-event-category="ticket button" ga-event-action="buy_click">
-          <paper-button class="buy-button" primary>{$ buyTicket $}</paper-button>
-        </a> -->
+        </a>
       </paper-tabs>
 
       <paper-menu-button
