--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -147,7 +147,7 @@
           <div class="info-item">{$ heroSettings.home.covidMessage $}</div>
         </div>
 
-      <div class="action-buttons" layout horizontal center-justified wrap>
+      <!-- <div class="action-buttons" layout horizontal center-justified wrap>
           <a href="https://conference-hall.io/public/event/ONmsPlwbLHHBTtFGkZpJ" target="_blank" rel="noopener noreferrer" ga-on="click"
            ga-event-category="cfp button" ga-event-action="cfp_click">
           <paper-button
@@ -161,7 +161,7 @@
             {$ buyTicket $}
           </paper-button>
           </a>
-        </div>
+        </div> -->
 
         <div class="scroll-down" on-tap="_scrollNextBlock">
           <svg xmlns="http://www.w3.org/2000/svg"  version="1.1" id="Layer_2" x="0px" y="0px" viewBox="0 0 25.166666 37.8704414" enable-background="new 0 0 25.166666 37.8704414" xml:space="preserve">
